Padding fix for the default message on public timeline

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -43,7 +43,7 @@
     <div>
         <div class="cheep-item">
 
-            <p class="cheep-body"> Log in to experience new ideas on Chirp. </p>
+            <p class="cheep-body" id = "defaultMessage"> Log in to experience new ideas on Chirp. </p>
         </div>
     </div>
 }
