--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -12,7 +12,7 @@
                 alt="Public timeline" 
                 id="icon"
             />
-            Public timeline
+            Public timeline by @Model.sortState
         </a>
 
         @if(SignInManager.IsSignedIn(User)){
@@ -24,6 +24,10 @@
                  />
                  My timeline
             </a>
+
+            @await Html.PartialAsync("_Sort")
+
+
         }
 
         @await Html.PartialAsync("_LoginPartial")
@@ -49,24 +53,24 @@
                     if(i > Model.CurrentPage + 3){
                         if(i == Model.LastPage){
                             <fill>..</fill>
-                            <li onclick = "location.href = '@ViewData["Location"]?page=@i'" class="list-item"> @i</li>
+                            <li onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" class="list-item"> @i</li>
                         }
                     } else if(Model.CurrentPage == i){
-                        <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                        <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" > @i</li>
                     }else{
-                        <li onclick = "location.href = '@ViewData["Location"]?page=@i'" class="list-item"> @i</li>
+                        <li onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" class="list-item"> @i</li>
                     }
 
                 }else if (Model.CurrentPage == Model.LastPage){
                     if(i < Model.CurrentPage - 3){
                         if(i == 0){
-                            <li onclick = "location.href = '@ViewData["Location"]?page=@i'" class="list-item"> @i</li>
+                            <li onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" class="list-item"> @i</li>
                             <fill>..</fill>
                         }
                     } else if(Model.CurrentPage == i){
-                        <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                        <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" > @i</li>
                     }else{
-                        <li onclick = "location.href = '@ViewData["Location"]?page=@i'" class="list-item"> @i</li>
+                        <li onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" class="list-item"> @i</li>
                     }
 
 
@@ -77,18 +81,18 @@
                             if(Model.CurrentPage + 3 < Model.LastPage){
                                 <fill>..</fill>
                             }
-                            <li onclick = "location.href = '@ViewData["Location"]?page=@i'" class="list-item"> @i</li>
+                            <li onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" class="list-item"> @i</li>
 
                         } else if(i == 0){
-                            <li onclick = "location.href = '@ViewData["Location"]?page=@i'" class="list-item"> @i</li>
+                            <li onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" class="list-item"> @i</li>
                             if(Model.CurrentPage - 3 > 0){
                                 <fill>..</fill>
                             }
                         }
                     } else if(Model.CurrentPage == i){
-                        <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i'" > @i</li>
+                        <li id = "current" onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" > @i</li>
                     } else{
-                        <li onclick = "location.href = '@ViewData["Location"]?page=@i'" class="list-item"> @i</li>
+                        <li onclick = "location.href = '@ViewData["Location"]?page=@i&sort=@Model.sortState'" class="list-item"> @i</li>
                     }
                 }
             }
