patch for new cheep variables

--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -37,9 +37,14 @@
         @foreach (var cheep in Model.MyCheeps)
         {
             @await Html.PartialAsync("_Cheep", new CheepPartialView {
+                Id = cheep.Id,
                 Author= cheep.Author,
                 Body= cheep.Text,
-                Date= cheep.Timestamp
+                Date= cheep.Timestamp,
+                Likes = cheep.Likes,
+                Dislikes = cheep.Dislikes,
+                isLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id),
+                isDisliked = await @Model.HasDisliked(User!.Identity!.Name!, cheep.Id)
             })
         } 
     } else
