--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -29,6 +29,14 @@
 
 <button id="forgetme" data-author="@Model.AuthorDTO.Name">Forget me</button>
 
+<div class="confirmForgetMe" id="confirmForgetMe">
+    <p>Are you sure?</p>
+    <div class="confirmButtons">
+        <button id="forgetMeNo">No</button>
+        <button id="forgetMeYes">Yes</button>
+    </div>
+</div>
+
 <h3>All your personal tweets</h3>
 @if(SignInManager.IsSignedIn(User))
 {
@@ -64,28 +72,35 @@
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         const forgetme = document.getElementById("forgetme")
-        const dataAuthor = forgetme.getAttribute("data-author")
+        const confirmationNo = document.getElementById("forgetMeNo")
+        const confirmationYes = document.getElementById("forgetMeYes")
 
-        forgetme.addEventListener("click", () => {
-            const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
-
-            fetch(window.location.href + (window.location.href.includes("?") ? "&handler=forgetme" : "?handler=forgetme"), {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "RequestVerificationToken": antiforgeryToken
-                },
-                body: JSON.stringify({ 
-                    userName: dataAuthor
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log(data)
-            })
-            .catch(error => {
-                console.error("Error:", error);
-            });
-        })
+        confirmationYes.addEventListener("click", () => forgetMe(forgetMe))
+        confirmationNo.addEventListener("click", () => toggleVisibilityById("confirmForgetMe"))
+        forgetme.addEventListener("click", () => toggleVisibilityById("confirmForgetMe"))
     })
+
+    function forgetMe(forgetMe){
+        const dataAuthor = forgetme.getAttribute("data-author")
+        const antiforgeryToken  = document.querySelector('input[name="__RequestVerificationToken"]').value;
+
+        fetch(window.location.href + (window.location.href.includes("?") ? "&handler=forgetme" : "?handler=forgetme"), {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "RequestVerificationToken": antiforgeryToken
+            },
+            body: JSON.stringify({ 
+                userName: dataAuthor
+            })
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log(data)
+            window.location = location.origin
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+    }
 </script>
