Basic design for the filter-content

--- a/src/Chirp.Web/Pages/Shared/_Sort.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Sort.cshtml
@@ -1,13 +1,13 @@
 
 <button id="relevance" type="submit" asp-handler="Sort">
-     Sort by relevance
+     relevance
 </button>
 
 <button id="oldest" type="submit" asp-handler="Sort">
-     Sort by oldest
+     oldest
 </button>
 <button id="mostLiked" type="submit" asp-handler="Sort">
-     Sort by mostLiked
+     mostLiked
 </button>
  <script>
             document.getElementById("relevance").addEventListener("click", () => {
