--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -31,6 +31,10 @@ h2, .name-timeline {
   cursor:pointer;
 }
 
+.dropMenu{
+  position: relative;
+}
+
 .dropMenu button{
   background-color: transparent;
   height: 20px;
@@ -42,11 +46,17 @@ h2, .name-timeline {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(197, 197, 197);
+  background-color: rgb(214, 213, 213);
   width: 100px;
   height: 180px;
   flex-direction: column;
   flex-wrap: wrap;
+  z-index: 10;
+  right: 0px;
+  border-width: 1.5px;
+  border-style:solid;
+  border-color:rgb(60, 59, 59);
+  box-shadow: -3px 3px 8px rgba(0, 0, 0, 0.693);
 }
 
 .content button{
@@ -59,6 +69,12 @@ h2, .name-timeline {
   width: 80%;
   border-style: solid;
   border-width: 1px;
+  background-color: rgba(117, 117, 117, 0.549);
+  z-index: 10;
+}
+
+.content button:hover{
+  background-color: rgba(77, 77, 77, 0.549);
 }
 
 .content span{
