Hidden filter content until hovering over filter icon + "state" of public timeline relocated to the title instead of navbar

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -17,7 +17,7 @@
 
 
 <h2 class="name-timeline"> 
-    Public Timeline
+    Public Timeline - @Model.sortState
 
     <div class="dropMenu">
         <button><img src="/assets/filter.png" id="filter" /></button>
