--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <div class="title">
             <header>
                 <div class="brand-container">
-                    <img src="/assets/icon1.png" onclick = "window.location = '/?page=0'" class = "brand" id="icon" alt="Icon1" />
+                    <img src="/assets/icon1.png" onclick = "window.location = '/'" class = "brand" id="icon" alt="Icon1" />
                     <h1 class="brand" id="name">Chirp!</h1>
                 </div>
 
