--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -12,7 +12,7 @@
                 alt="Public timeline" 
                 id="icon"
             />
-            Public timeline by @Model.sortState
+            Public timeline
         </a>
 
         @if(SignInManager.IsSignedIn(User)){
