--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -30,6 +30,7 @@
 
     </div>
 
+@if(SignInManager.IsSignedIn(User)){
     <div class="navigation">
         <!-- Defines the 'prev' button which will function as a way to go to the
         previous page by clicking on it-->
@@ -107,6 +108,7 @@
             </a>
         }
     </div>
+}
 </nav>
 
 <script>
