--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -48,6 +48,7 @@
                 Id = cheep.Id,
                 Author= cheep.Author,
                 Body= cheep.Text,
+                ImageUrl= cheep.ImageUrl,
                 Date= cheep.Timestamp,
                 Likes = cheep.Likes,
                 Dislikes = cheep.Dislikes,
