--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -38,6 +38,7 @@
                 Id = cheep.Id,
                 Author = cheep.Author,
                 Body = cheep.Text,
+                ImageUrl= cheep.ImageUrl,
                 Date = cheep.Timestamp,
                 Likes = cheep.Likes,
                 Dislikes = cheep.Dislikes,
