--- a/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
@@ -5,8 +5,23 @@
         <strong class="cheep-author"> <a href="/users/@Model.Author">@Model.Author</a> </strong>
 
         <p class="cheep-body"> @Model.Body </p>
-        <span class="cheep-date"> &mdash; @Model.ToDateTime(Model.Date) </span>
+        
 
+        <p>Image URL: @Model.ImageUrl</p> <!-- For debugging -->
+        <!-- Display Image if ImageUrl is not null or empty -->
+        @if (!string.IsNullOrEmpty(Model.ImageUrl))
+        {
+            <div class="cheep-image">
+                <img src="@Model.ImageUrl" alt="Cheep Image" />
+            </div>
+        }
+        @if (string.IsNullOrEmpty(Model.ImageUrl))
+        {
+            <div class="cheep-image">
+                <img src="/uploads/1fa3bfe7-b920-4b15-bbf7-f5c360fa3cf8.jpg" alt="Cheep Image" />
+            </div>
+        }
+        <span class="cheep-date"> &mdash; @Model.ToDateTime(Model.Date) </span>
         <div class="LikeButtons">
             @if (@Model.IsLiked)
             {
