--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -290,3 +290,11 @@ nav {
 .pagelist li:hover{
   background: rgba(64, 144, 205, 0.583);
 }
+
+.cheep-image img {
+  width: 100%;
+  width: auto;
+  max-height: 300px;
+  padding: 7px;
+
+}
