--- a/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Cheep.cshtml
@@ -17,9 +17,9 @@
         @if (string.IsNullOrEmpty(Model.ImageUrl))
         {
             <div class="cheep-content">
-            <div class="cheep-image">
-                <img src="/uploads/frog.jPg" alt="Cheep Image" />
-            </div>
+                <div class="cheep-image">
+                    <img src="/uploads/frog.jpg" alt="Cheep Image" />
+                </div>
             </div>
         }
         <span class="cheep-date"> &mdash; @Model.ToDateTime(Model.Date) </span>
