--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -33,7 +33,7 @@
                 Id = cheep.Id,
                 Author= cheep.Author,
                 Body= cheep.Text,
-                ImageUrl= cheep.ImageUrl,
+                Image = cheep.Image,
                 Date= cheep.Timestamp,
                 Likes = cheep.Likes,
                 Dislikes = cheep.Dislikes,
