--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -38,7 +38,7 @@
                 Id = cheep.Id,
                 Author = cheep.Author,
                 Body = cheep.Text,
-                ImageUrl= cheep.ImageUrl,
+                Image = cheep.Image,
                 Date = cheep.Timestamp,
                 Likes = cheep.Likes,
                 Dislikes = cheep.Dislikes,
