Count of followers and followedby shows on web

--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -18,12 +18,16 @@
 <div class="mypage-outer">
     <div class="mypage-Identifiers">
             <div>Name</div>
-            <div>Email</div>        
+            <div>Email</div>   
+            <div>Following</div>
+            <div>Followers</div>     
         </div>
 
     <div class="mypage-variables">
         <div>@author.Name</div>
         <div>@author.Email</div>
+        <div>@Model.Following</div>
+        <div>@Model.Followed</div>
     </div>
 </div>
 
