--- a/src/Chirp.Web/Pages/FollowerPage.cshtml
+++ b/src/Chirp.Web/Pages/FollowerPage.cshtml
@@ -1,6 +1,6 @@
-@page "/users/{author}/mypage"
+@page "/users/{author}/mypage/followers"
 @using Chirp.Core.Entities
-@model Chirp.Web.models.MyPage
+@model Chirp.Web.models.FollowerPage
 @inject SignInManager<Author> SignInManager
 @inject UserManager<Author> UserManager
 @using Chirp.Web.models;
@@ -8,61 +8,26 @@
 @{
     ViewData["Title"] = "Chirp!";
     Layout = "./Shared/_Layout.cshtml";
-    var author = @Model.AuthorDTO;
 }
 
 @await Html.PartialAsync("_Nav")
 
-<h2>Your private information</h2>
 
-<div class="mypage-outer">
-    <div class="mypage-Identifiers">
-            <div>Name</div>
-            <div>Email</div>   
-            <div>Following</div>
-            <strong class="cheep-author"> <a href="/users/@User!.Identity!.Name/mypage/followers">Followers</a> </strong>
-        </div>
-
-    <div class="mypage-variables">
-        <div>@author.Name</div>
-        <div>@author.Email</div>
-        <div>@Model.Following</div>
-        <div>@Model.Followed</div>
-    </div>
-</div>
-
-<button id="forgetme" data-author="@Model.AuthorDTO.Name">Forget me</button>
-
-<div class="confirmForgetMe" id="confirmForgetMe">
-    <p>Are you sure?</p>
-    <div class="confirmButtons">
-        <button id="forgetMeNo">No</button>
-        <button id="forgetMeYes">Yes</button>
-    </div>
-</div>
-
-<h3>All your personal tweets</h3>
 @if(SignInManager.IsSignedIn(User))
 {
-    @if (Model.MyCheeps.Count > 0)
+    <strong class="cheep-author"> <a href="/users/@User!.Identity!.Name/mypage">Go back</a> </strong>
+
+    
+    <h3>All your followers</h3>
+    @if (Model.FollowingList!.Count > 0)
     {
-        @foreach (var cheep in Model.MyCheeps)
+        @foreach (var authorDTO in Model.FollowingList)
         {
-            @await Html.PartialAsync("_Cheep", new CheepPartialView {
-                Id = cheep.Id,
-                Author= cheep.Author,
-                Body= cheep.Text,
-                Image = cheep.Image,
-                Date= cheep.Timestamp,
-                Likes = cheep.Likes,
-                Dislikes = cheep.Dislikes,
-                IsLiked = await @Model.HasLiked(User!.Identity!.Name!, cheep.Id),
-                IsDisliked = await @Model.HasDisliked(User!.Identity!.Name!, cheep.Id)
-            })
+            <strong class="cheep-author"> <a href="/users/">@authorDTO.Name</a> </strong>
         } 
     } else
     {
-        <em>You have no cheeps so far.</em>
+        <em>You have no followers so far.</em>
     }
 } else
 {
