--- a/src/Chirp.Web/Pages/MyPage.cshtml
+++ b/src/Chirp.Web/Pages/MyPage.cshtml
@@ -19,8 +19,9 @@
     <div class="mypage-Identifiers">
             <div>Name</div>
             <div>Email</div>   
-            <div>Following</div>
-            <strong class="cheep-author"> <a href="/users/@User!.Identity!.Name/mypage/followers">Followers</a> </strong>
+            <strong class="cheep-author"> <a href="/users/@User!.Identity!.Name/mypage/followers">Following</a></strong>
+            <br>
+            <strong class="cheep-author"> <a href="/users/@User!.Identity!.Name/mypage/followedby">Followers</a> </strong>
         </div>
 
     <div class="mypage-variables">
