--- a/src/Chirp.Web/wwwroot/css/index.css
+++ b/src/Chirp.Web/wwwroot/css/index.css
@@ -61,29 +61,39 @@ header {
 }
 
 .PB .content{
-position: absolute;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 100px;
-  height: auto;
-  padding: 5px;
-  z-index: 10;
-  right: 0px;
-  top: 50px;
-  border-width: 1.5px;
-  border-style:solid;
-  border-color:rgb(60, 59, 59);
-  background-color: rgb(214, 213, 213);
-  box-shadow: -3px 3px 8px rgba(0, 0, 0, 0.693);
-  display: none;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100px;
+    height: auto;
+    padding: 5px;
+    z-index: 20;
+    right: 0px;
+    top: 50px;
+    border-width: 1.5px;
+    border-style:solid;
+    border-color:rgb(60, 59, 59);
+    background-color: rgb(214, 213, 213);
+    box-shadow: -3px 3px 8px rgba(0, 0, 0, 0.693);
+    display: none;
+    font-size: 10px;
+}
+
+.content a{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
 }
 
 #settingIcon{
     display: flex;
-    width: 45px;
-    height: 45px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
 }
 
