--- a/src/Chirp.Web/Pages/Shared/_Nav.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Nav.cshtml
@@ -30,7 +30,7 @@
 
     </div>
 
-@if(SignInManager.IsSignedIn(User)){
+@if(SignInManager.IsSignedIn(User) && Model.LastPage != -1){
     <div class="navigation">
         <!-- Defines the 'prev' button which will function as a way to go to the
         previous page by clicking on it-->
